--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       };
       console.log(payload);//ส่งเป็นละติจูด ลองติจูด และวันเวลา
 
-      //const webhookUrl = 'https://cctv-test.cctv-bot.site/webhook/657c988c-3db6-4576-9c15-814bd86f96d1'; // 👈 เปลี่ยนตรงนี้
+      const webhookUrl = 'https://cctv-test.cctv-bot.site/webhook-test/8b4373bf-eed6-4e66-959f-39f702a969cf'; // 👈 เปลี่ยนตรงนี้
 
       try {
         const resp = await fetch(webhookUrl, {
